test/core/errors/offsets_error/zs/signed_bitfield_error.zs
package signed_bitfield_error;

struct SignedBitfieldError
{
    int<12> offset;
offset:
    uint32  values[];
};
